# unisacsi

./: .gitignore  LICENSE  README.md  config_model_download.yml  examples.ipynb  exercises.ipynb  exercises_solutions.ipynb  requirements.txt  setup.cfg  setup.py  temp-plot.html
unisacsi/: MET_model_download.py  MET_model_tools.py  Meteo.py  Ocean.py  __init__.py  config_model_download.yml  config_model_variables.yml  examples.ipynb  examples.py  universal_func.py
