[metadata]
name = unisacsi
version = 0.3.32
author = Lukas Frank, Jakob Doerr, Patrick Selle
author_email = lukasf@unis.no, jakob.dorr@uib.no, patrick.selle@uni-potsdam.de
description = Python toolbox for reading and analysing meteorological and oceanographic data from fieldwork with UNIS AGF courses.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UNISvalbard/unisacsi
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Oceanography
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib
    notebook
    nb_conda_kernels
    numpy
    scipy
    pandas
    geopandas
    shapely
    netCDF4
    cartopy
    cmocean
    xarray
    rioxarray
    dask
    git
    pip
    metpy
    yaml
    threddsclient
    gsw
    adjusttext
    spectrum
    pytmd
    utide
    plotly
    dask-labextension
    windrose
    seaborn
    glob2
    ephem

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
dev =
    build
    twine
    black
    flake8
    isort