[metadata]
name = unisacsi
version = 1.1.0
author = Lukas Frank, Jakob Doerr, Patrick Selle
author_email = lukasf@unis.no, jakob.dorr@uib.no, patrick.selle@uni-potsdam.de
description = Python toolbox for reading and analysing meteorological and oceanographic data from fieldwork with UNIS AGF courses.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UNISvalbard/unisacsi
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Oceanography
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = ==3.12.*
install_requires =
    matplotlib==3.10.8
    notebook==7.5.4
    numpy==2.4.3
    scipy==1.17.1
    pandas==3.0.1
    geopandas==1.1.2
    shapely==2.1.2
    netCDF4==1.7.4
    cartopy==0.25.0
    cmocean==4.0.3
    xarray==2026.2.0
    rioxarray==0.22.0
    dask==2026.1.2
    metpy==1.7.1
    threddsclient==0.4.7
    gsw==3.6.21
    adjusttext==1.3.0
    spectrum==0.10.0
    pytmd==3.0.4
    utide==0.3.1
    plotly==6.6.0
    dask-labextension==7.0.0
    windrose==1.9.2
    seaborn==0.13.2
    glob2==0.7
    ephem==4.2.1
    pyrsktools==1.1.1
    uptide==1.2
    seabird==0.12.0
    sounddevice==0.5.5
    pyarrow==23.0.1

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
dev =
    build
    twine
    black
    flake8
    isort
    nb_conda_kernels
    git
    pip
    yaml